# solution-segmentation

./: CMakeLists.txt  README.md  common-lab-utils.cpp  common-lab-utils.h  conanfile.py  lab-segmentation.cpp  lab-segmentation.h  lab_11.cpp  lab_11.h  main.cpp  multivariate-normal-model.cpp  multivariate-normal-model.h  multivariate_normal_model.cpp  multivariate_normal_model.h
